# stock-ta-trader

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  analyze.sh  backtest.md  docker-compose.yml  infrastructure.md  main.py  pyproject.toml  requirements.txt  run_telegram.py  value_investing_indicators_detail.md
.claude/: settings.json
.claude/commands/: analyze.md  backtest.md  screen.md  update-deps.md  value.md
configs/: watchlist copy.yaml  watchlist.yaml  watchlist_test.yaml
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.jsx  MultiFactorDashboard.jsx
docs/: architecture.md  atr%.md  bollinger_band.md  fibonacci.md  long_term_investment_guide.md  macd.md  mobile_interface.md  moving_avg.md  regime_adaptive_signal.md  rsi.md  trading_overview.md  거래량_기반_지표.md
interests/: 000660_KS_growth_20260408_SK하이닉스.txt  000660_KS_position_20260407_SK하이닉스.txt  000660_KS_position_20260408_SK하이닉스.txt  000660_KS_swing_20260407_SK하이닉스.txt  000660_KS_swing_20260408_SK하이닉스.txt  000660_KS_value_20260408_SK하이닉스.txt  005930_KS_growth_20260408_삼성전자.txt  005930_KS_position_20260407_삼성전자.txt  005930_KS_position_20260408_삼성전자.txt  005930_KS_swing_20260407_삼성전자.txt  005930_KS_swing_20260408_삼성전자.txt  005930_KS_value_20260408_삼성전자.txt  058470_KQ_growth_20260408_리노공업.txt  058470_KQ_position_20260407_리노공업.txt  058470_KQ_position_20260408_리노공업.txt  058470_KQ_swing_20260407_리노공업.txt  058470_KQ_swing_20260408_리노공업.txt  058470_KQ_value_20260407_리노공업.txt  058470_KQ_value_20260408_리노공업.txt  ARKG_growth_20260407_ARK_Genomic_Revolution_ETF.txt  ARKG_position_20260407_ARK_Genomic_Revolution_ETF.txt  ARKG_position_20260408_ARK_Genomic_Revolution_ETF.txt  ARKG_swing_20260407_ARK_Genomic_Revolution_ETF.txt  ARKG_swing_20260408_ARK_Genomic_Revolution_ETF.txt  ARKG_value_20260407_ARK_Genomic_Revolution_ETF.txt  DOW_growth_20260407_Dow.txt  DOW_growth_20260408_Dow.txt  DOW_position_20260407_Dow.txt  DOW_position_20260408_Dow.txt  DOW_swing_20260407_Dow.txt  DOW_swing_20260408_Dow.txt  DOW_value_20260407_Dow.txt  INUV_growth_20260407_Inuvo.txt  INUV_position_20260407_Inuvo.txt  INUV_position_20260408_Inuvo.txt  INUV_swing_20260407_Inuvo.txt  INUV_swing_20260408_Inuvo.txt  INUV_value_20260407_Inuvo.txt  JEPI_growth_20260407_JPMorgan_Equity_Premium_Income_.txt  JEPI_position_20260407_JPMorgan_Equity_Premium_Income_.txt  (+69 more)
scripts/: analyze.sh  analyze2.sh  analyze_csv.sh  analyze_recommend.sh  analyze_recommend_csv.sh  backup.sh  check_csv.sh  interest.sh  recommend.sh  recommend_csv.sh
src/ta_trader/: __init__.py  analyzer.py  constants.py  db.py  exceptions.py  models.py  style_config.py
src/ta_trader/agents/: __init__.py  base_.py  data.py  data_agent.py  execution.py  execution_agent.py  formatter.py  models_.py  orchestrator.py  risk.py  risk_agent.py  strategy.py  strategy_agent.py
src/ta_trader/analyzers/: __init__.py  google.py  (+12 more)
tests/: conftest.py  test_api.py  test_backtest.py  test_gemini.py  test_google.py  test_growth.py  test_indicators.py  test_llm.py  test_recommend.py  test_risk.py  test_signals.py  test_strategy.py  test_value.py
(+138 files in other folders)
