[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "stock-ta-trader"
version         = "1.0.0"
description     = "ADX/MACD/RSI/Bollinger Bands 기반 1개월 단위 기술적 분석 트레이딩 시스템 & Mobile API & Bot Interface"
requires-python = ">=3.11"
dependencies = [
    # Core
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",

    # Auth
    "PyJWT>=2.8.0",

    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # Cache
    "redis[hiredis]>=5.0.0",

    # HTTP client
    "httpx>=0.27.0",

    # Scheduler
    "APScheduler>=3.10.0",

    # Telegram
    "python-telegram-bot>=21.0",
]

[project.optional-dependencies]
core = [
    "yfinance>=0.2.40",
    "ta>=0.11.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "structlog>=24.1",
    "click>=8.1",
    "pyyaml>=6.0",
    "anthropic>=0.75.0",
    "google-generativeai>=0.8.5",
]

dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=5.0",
    "black>=24.0",
    "isort>=5.13",
    "mypy>=1.9",
    "ruff>=0.4",
]

all = [
    "stock-ta-trader[core,dev]",
]

[project.scripts]
stock-ta-trader = "ta_trader.__main__:main"
sta-api = "interfaces.api.main:app"
sta-telegram = "run_telegram:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length    = 100
target-version = ["py311"]

[tool.isort]
profile        = "black"
line_length    = 100
src_paths      = ["src", "tests"]

[tool.pytest.ini_options]
testpaths  = ["tests"]
addopts    = "-v --cov=src/ta_trader --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
strict         = true
ignore_missing_imports = true
warn_return_any = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]